cmake_minimum_required(VERSION 3.20)
project (Lab1DSA)

set(CMAKE_CXX_STANDARD 14)

add_executable( Lab1DSA App.cpp
         ExtendedTest.cpp
         ExtendedTest.h
         ShortTest.cpp
         ShortTest.h
         SortedBag.cpp
         SortedBag.h
         SortedBagIterator.cpp
         SortedBagIterator.h
)
